solved the icon overlapping issue of password and got rid of eval and == somewhere

--- a/Assignment_Reward_JavaScript/css/static-id-style.css
+++ b/Assignment_Reward_JavaScript/css/static-id-style.css
@@ -34,11 +34,7 @@
 #passwordConfirmationInput {
   width: 594px;
   margin: 20px 0px 5px;
-}
-
-#passwordConfirmationInput {
-  width: 594px;
-  margin: 20px 0px 5px;
+  padding-right: 75px;
 }
 
 #primaryCellPhoneInput {
